# sokol-rust

./: .editorconfig  Cargo.toml  README.md  build.rs  gen_rust.py  sokolrust.cc
.github/workflows/: main.yml
examples/: clear.rs
examples/blend/: blend.rs  shader.rs
examples/clear/: clear.rs
examples/cube/: cube.rs  math.rs  shader.rs
examples/debugtext/: debugtext.rs
examples/glam_cube/: Cargo.toml
examples/glam_cube/src/: main.rs  shader.glsl  shader.rs
examples/imgui/: Cargo.toml
examples/instancing/: instancing.rs
examples/mrt/: math.rs  mrt.rs  shader.rs
examples/sgl-context/: sgl-context.rs
examples/sgl-points/: sgl-points.rs
examples/texcube/: shader.rs  texcube.rs
examples/userdata/: userdata.rs
src/: app.rs  audio.rs  debugtext.rs  gfx.rs  gfx_imgui.rs  gl.rs  glue.rs  imgui.rs  lib.rs  log.rs  shape.rs  time.rs
