[package]
name = "sokol"
version = "0.1.0"
edition = "2021"
authors = ["Erik W. Gren <ErikWDev@gmail.com>"]
build = "build.rs"

[[example]]
name = "clear"
path = "examples/clear/clear.rs"

[[example]]
name = "userdata"
path = "examples/userdata/userdata.rs"

[[example]]
name = "cube"
path = "examples/cube/cube.rs"

[[example]]
name = "mrt"
path = "examples/mrt/mrt.rs"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }